prevent wrapping of basic sidebar links

--- a/MoinMoin/themes/basic/static/css/theme.css
+++ b/MoinMoin/themes/basic/static/css/theme.css
@@ -6449,6 +6449,12 @@ a:focus.moin-showhide {
 .moin-sidebar-panels {
   overflow: hidden;
 }
+.moin-sidebar-panels a {
+  white-space: nowrap;
+}
+.moin-sidebar-panels .moin-showhide a {
+  white-space: normal;
+}
 .moin-sidebar-panels a .hidden-sm,
 .moin-sidebar-panels a .hidden-xs {
   display: inline !important;
